--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "PAR-DELIVERY",
+  "name": "PAR-DELIVERY, Hookah, vape, snus",
   "icons": [
     {
       "src": "favicon.ico",
